@@ -1,5 +1,5 @@
 # -*-cperl-*-
-#  $Id: Pg.pm 10608 2008-01-18 15:50:09Z turnstep $
+#  $Id: Pg.pm 10618 2008-01-19 19:04:18Z turnstep $
 #
 #  Copyright (c) 2002-2008 Greg Sabino Mullane and others: see the Changes file
 #  Portions Copyright (c) 2002 Jeffrey W. Baker
@@ -17,7 +17,7 @@ use 5.006001;
 {
 	package DBD::Pg;
 
-	our $VERSION = '2.0.0_4';;
+	our $VERSION = '2.0.0_5';;
 
 	use DBI ();
 	use DynaLoader ();
@@ -1618,7 +1618,7 @@ DBD::Pg - PostgreSQL database driver for the DBI module
 
 =head1 VERSION
 
-This documents version 2.0.0_4 of the DBD::Pg module
+This documents version 2.0.0_5 of the DBD::Pg module
 
 =head1 SYNOPSIS
 
